# games

./: .gitignore  CLAUDE.md  CONTENT_POLICY.md  README.md  SCHEMA.md  authors.toml
.github/: dependabot.yml
.github/scripts/: test_validate_game_dir.py  validate_game_dir.py  validate_game_toml.py
.github/workflows/: authorize.yml  glyphcheck.yml  kit-autobump.yml  publish.yml  smoke-preview.yml  validate.yml  vulncheck.yml
docs/superpowers/plans/: 2026-06-14-pokies-aussie-features.md  2026-06-15-leaderboard-coverage-dc-save.md  2026-06-21-pokies-lounge-floor.md  2026-06-22-pokies-5reel-243ways.md
docs/superpowers/specs/: 2026-06-14-pokies-aussie-features-design.md  2026-06-15-leaderboard-coverage-dc-save-design.md  2026-06-21-pokies-lounge-floor-5reel-design.md
games/SKUNK420LITEM/voidrunners/: README.md  go.mod  main.go  render.go  room.go  types.go
games/alan/bytebreaker/: .gitignore  CHANGELOG.md  README.md  alloc_test.go  board.go  board_test.go  game.go  go.mod  go.sum  main.go  render.go  room.go  room_test.go  smoke.yaml
games/alan/chess/: .gitignore  alloc_test.go  chess_leaderboard_test.go  diffcapture_test.go  game.go  game.toml  go.mod  go.sum  layout.go  main.go  numfmt.go  room.go  room_test.go  smoke.yaml
games/alan/roulette/: .gitignore  CHANGELOG.md  README.md  bets.go  bets_test.go  board.go  board_test.go  game.go  go.mod  go.sum  main.go  render.go  render_test.go  rng_test.go  room.go  room_test.go  roulette_leaderboard_test.go  smoke.yaml  wheel.go
games/alan/salvo/: .gitignore  CHANGELOG.md  LICENSE  README.md  ai.go  ai_test.go  alloc_test.go  game.go  go.mod  main.go  render.go  room.go  room_test.go  smoke.yaml  terrain.go  terrain_test.go  world.go  world_test.go
games/bcook/blackjack/: .gitignore  anim.go  blackjack  cards.go  cards_test.go  diffcapture_test.go  diffcommon_test.go  exports.go  game.go  game.toml  go.mod  go.sum  layout.go  main.go  numfmt.go  numfmt_alloc_test.go  room.go  room_test.go  round.go  round_test.go  smoke.yaml
games/bcook/boneyard/: .gitignore  bones.go  bones_test.go  boneyard  boneyard_leaderboard_test.go  budget_test.go  character_test.go  combat.go  game.go  game_test.go  gate.go  gate_test.go  gen.go  gen_test.go  go.mod  go.sum  items.go  lastwords.go  main.go  monsters.go  numfmt.go  numfmt_alloc_test.go  player.go  reap_test.go  render.go  rng.go  score.go  score_test.go  smoke.yaml  verbs_test.go  world.go
games/bcook/diff-rs/: README.md
games/bcook/floorfall/: .gitignore  README.md  go.mod  main.go  render.go  room.go  room_test.go  smoke.yaml  types.go  zz_snapshot_test.go
games/bcook/meltdown/: .gitignore  README.md  go.mod  main.go  meltdown_leaderboard_test.go  render.go  room.go  room_test.go  smoke.yaml  types.go  zz_snapshot_test.go
games/bcook/pokies/: .gitignore  alloc_test.go  character_test.go  config.go  config_test.go  diffcapture_test.go  floor.go  floor_test.go  floorlayout.go  freespins.go  freespins_test.go  gamble.go  gamble_test.go  game.toml  go.mod  go.sum  layout.go  main.go  numfmt.go  numfmt_alloc_test.go  pawn.go  pawn_test.go  pokies_test.go  room.go  smoke.yaml  themes.go  variant.go  variant_test.go  ways_test.go
games/bcook/putt/: .gitignore  README.md  go.mod  holes.go  main.go  putt_leaderboard_test.go  render.go  room.go  room_test.go  smoke.yaml  types.go  zz_snapshot_test.go
games/bcook/scratchies/: .gitignore  ARTBOARDS.md  CHANGELOG.md  README.md  SPEC.md  allcards_test.go  card.go  card_test.go  catalog.go  catalog_test.go  game.go  go.mod  kv.go  main.go  mech_bingo.go  mech_bingo_test.go  mech_crossword.go  mech_crossword_test.go  mech_find.go  mech_find_test.go  mech_keynum.go  mech_keynum_test.go  mech_lines.go  mech_lines_test.go  mech_match3.go  mech_match3_test.go  mech_mult.go  mech_mult_test.go  mech_showdown.go  mech_showdown_test.go  mech_triple.go  mech_triple_test.go  render.go  room.go  smoke.yaml  ticket.go
games/bcook/shellracer/: .gitignore  exports.go  game.toml  go.mod  main.go  smoke.yaml
games/bcook/spaceterm/: .gitignore  ARTBOARDS.md  CHANGELOG.md  README.md  SPEC.md  anomaly.go  game.go  go.mod  main.go  orders.go  panel.go  render.go  room.go  room_test.go  smoke.yaml  spaceterm_leaderboard_test.go  words.go
games/bcook/stacked/: .gitignore  README.md  go.mod  main.go  pieces.go  render.go  room.go  room_test.go  smoke.yaml  types.go  zz_snapshot_test.go
games/bcook/tic-tac-toe/: diffcapture_test.go  game.go  (+5 more)
games/bcook/tic-tac-toe-rs/: .gitignore  Cargo.toml  README.md  smoke.yaml
games/bcook/tic-tac-toe-rs/src/: broadcast.rs  delta.rs  frame.rs  game.rs  host.rs  lib.rs  render.rs  wire.rs
games/bcook/tic-tac-toe-rs/tests/: leaderboard.rs
tools/glyphcheck/: eaw.go  go.mod  main.go  main_test.go
(+80 files in other folders)
