[package]
name = "tic-tac-toe-rs"
version = "0.1.0"
edition = "2021"
publish = false

# Tic-Tac-Toe, a shellcade catalog game written in RUST on the shellcade-kit
# SDK crate. The first hand-rolled v2 incarnation of this game carried ~800
# lines of ABI plumbing; the SDK now owns all of it (frame packing, wire
# codecs, host imports, delta encoding, baseline/epoch broadcast) and what
# remains here is the game.
#
# Build (release profile — what CI ships):
#   cargo build --release --target wasm32-wasip1
# The artifact lands at target/wasm32-wasip1/release/tic_tac_toe_rs.wasm.
# Verify with:  shellcade-kit check target/wasm32-wasip1/release/tic_tac_toe_rs.wasm

[lib]
# cdylib on wasm32-wasip1 produces a WASI reactor (the form the arcade
# instantiates); rlib additionally lets the game logic be unit-tested natively
# (`cargo test`) — the SDK's host transport is wasm-gated.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned to the kit release tag (lockstep with the SDK the arcade runs).
shellcade-kit = { git = "https://github.com/shellcade/kit", tag = "v2.12.1" }

[profile.release]
# The artifact contract: cargo applies profiles only at this (leaf) crate.
# Small, fast-to-build, matching the dev-profile intent of the TinyGo games.
opt-level = "s"
lto = true
strip = true
panic = "abort"
